[tool.poetry]
name = "tutorial-mongodb"
version = "0.1.0"
description = ""
authors = ["monteiro.tales <monteiro.tales@luizalabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
